# bridge

./: CMakeLists.txt  xmake.lua
cfg/: bridge.yaml  config.json
include/: cfg.h  context.h  utils.h
interface/: CMakeLists.txt  interface.cpp  interface.h
src/: main.cpp
